--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -3,13 +3,12 @@
 @use './partials/typography' as *;
 @use './partials/global' as *;
 
+// top image and title
 .hero{
     background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(/assets/images/hero-bio.jpg);
     background-size: cover;
     width: 100%;
     height: 66.5vw;
-    min-height: 11.6875rem;
-    max-height: 43.75rem;
     background-position: center;
     color: $white;
     @include flex-center;
@@ -20,29 +19,15 @@
         @include page-header;
     }
     @include tablet {
-        width: 100%;
-        height: 66.5vw;
-        min-height: 11.6875rem;
-        max-height: 43.75rem;
-        background-position: center;
-        @include flex-center;
-        @include flex-column;
-    
         &__title{
             padding: 3rem;
-            @include page-header;
         }
     }
     @include desktop{
-        width: 100%;
         height: 90vh;
-        background-position: fixed;
-        @include flex-center;
-        @include flex-column;
     
         &__title{
             padding: 5rem;
-            @include page-header;
         }
     }
 }
@@ -50,8 +35,8 @@
 // About the Musicians 
 .about{
     @include mobile_padding;
-    width: 100%;
     @include flex-column;
+    width: 100%;
 
     &__title{
         @include page-header;
@@ -59,11 +44,8 @@
     }
     &__img{
         width: 100%;
-        display: flex;
-        align-items: center;
-        justify-content: center;
+        @include flex-center;
         margin-bottom: 1.25rem;
-
     }
     &__content{
         @include subheader;
@@ -74,69 +56,41 @@
         color: $bandSite-black;
         margin: -0.625rem 0;
     }
-
     @include tablet{
         @include tablet_padding;
-        width: 100%;
         height: 90%;
-        @include flex-column;
     
         &__title{
             @include section-header;
-            padding-bottom: 1.25rem;
         }
         &__img{
             width: 90%;
-            @include flex-center;
             margin: .625rem 0 1.25rem 2.6rem;
         }
         &__content{
-            @include subheader;
-            color: $bandSite-black;
-            margin: 0 5rem; 
-            margin-left: 2.5rem;
-            margin-right: 5rem;
-            margin-bottom: -1.875rem;
+            margin: 0 5rem -1.875rem 2.5rem; 
         } 
         &__quote-author{
-            @include body;
-            color: $bandSite-black;
             margin: 30px 0 -20px 40px;
         }
     }
     @include desktop{
         @include tablet_padding;
-        width: 100%;
-        height: 100%;
-        @include flex-column;
     
         &__title{
             @include section-header;
-            padding-bottom: 1.25rem;
-            margin-left: 50px;
-            margin-bottom: 30px;
+            margin: 0 1.775rem 0 3.125rem;
         }
         &__img{
             width: 80%;
-            height: 20%;
-            @include flex-center;
-            margin-bottom: 20px;
-            margin-left: 130px;
-            flex-wrap: wrap;
-    
+            margin: .625rem 0 1.25rem 8.125rem;
         }
         &__content{
-            @include subheader;
-            color: $bandSite-black;
-            margin-left: 130px;
-            margin-right: 400px;
+            margin: 0 25rem 0 8.125rem;
         }
         &__quote-author{
-            @include body;
-            color: $bandSite-black;
-            margin: 30px 0 -20px 40px;
+            margin: 0 0 -1.5rem 8.125rem;
         }
-    
     }
 }
 
@@ -146,62 +100,55 @@
 
     &__title{
         @include subheader;
-        padding-bottom: 20px;
+        padding-bottom: 1.25rem;
     }
     &__content{
         @include body;
     }
     @include tablet{
         @include tablet_padding;
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         flex-wrap: nowrap;
 
         &__title{
             @include subheader;
-            padding-bottom: 20px;
-            margin-left: 40px;
+            padding-bottom: 1.25rem;
+            margin-left: 2.5rem;
             width: 100%;
         }
         &__content{
             @include body;
-            display: flex;
-            flex-direction: row;
-            margin-left: 20px;
-            margin-right: 30px;
+            @include flex-row;
+            margin: 0 1.875rem 0 1.25rem;
 
             &-item {
-                margin-left: 20px;
-                margin-right: 20px;
+                margin: 0 1.25rem;
             }
         }
     }
     @include desktop{
         @include tablet_padding;
-        display: flex;
-        flex-direction: column;
+        @include flex-column;
         flex-wrap: nowrap;
 
         &__title{
             @include subheader;
-            padding-bottom: 20px;
-            margin-left: 125px;
+            padding-bottom: 1.25rem;
+            margin-left: 7.8125rem;
             width: 100%;
         }
         &__content{
             @include body;
-            display: flex;
-            flex-direction: row;
-            margin-left: 80px;
-            margin-right: 80px;
+            @include flex-row;
+            margin: 0 5rem;
 
             &-item {
-                margin-left: 50px;
-                margin-right: 50px;
+                margin: 0 3.125rem;
             }
         } 
     }
 }
+
 // Gallery photos
 .gallery{
     width: 100%;
@@ -211,60 +158,41 @@
     
     &__title{
         @include page-header;
-        padding: 16px 0;
+        padding: 1rem;
     }
     &__imgs{
         width: 100%;
-        padding: 10px 0;
+        padding: 0.625rem;
     }
     @include tablet{
-        width: 100%;
-        @include flex-column;
-        background-color: $alabaster;
-        @include tablet_padding;
         justify-content: center;
         
         &__title{
-            width: 100%;
             @include section-header;
-            padding: 10px;
+            padding: 0 3.4375rem;
         }
         &__img-section{
-            display: flex;
+            @include flex-center;
             flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
         }
         &__imgs{
-            width: 29%;
-            padding: 10px 10px;
-            flex-wrap: wrap;
+            width: 30%;
+            padding: 0.625rem;
         }
     }
     @include desktop{
-        width: 100%;
-        @include flex-column;
-        background-color: $alabaster;
-        @include tablet_padding;
-        justify-content: center;
-        
         &__title{
-            width: 100%;
             @include section-header;
-            padding: 10px;
-            margin-left: 80px;
-            margin-bottom: 20px;
+            padding: 0.625rem;
+            margin: 0 0 1.25rem 4.3rem;
         }
         &__img-section{
-            display: flex;
+            @include flex-center;
             flex-wrap: wrap;
-            justify-content: center;
-            align-items: center;
         }
         &__imgs{
-            width: 29%;
-            padding: 10px 10px;
-            flex-wrap: wrap;
+            width: 30%;
+            padding: 0.625rem;
         }
     }
 }
